--- a/Basic Calculator/calculator.html
+++ b/Basic Calculator/calculator.html
@@ -30,7 +30,7 @@
 </style>
 <body>
     <form action="" name="calculator">
-        <table>
+        <table align="center">
             <tr>
                 <td colspan="32"><input type="text" id="display" class="textboxid" disabled></td>
             </tr>
